--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.11.0",
+    "joi-objectid": "^4.0.2",
     "mongoose": "^8.0.3",
     "nodemon": "^3.0.2",
     "stripe": "^14.13.0"
